tests/snapshots/run_wpt_conformance__onnx_matmul_float32_3D_and_2D_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "matmul.https.any.js",
    "matmul float32 3D and 2D tensors",
    "onnx",
    "PASS",
)
