tests/snapshots/run_wpt_conformance__onnx_maxPool2d_float16_4D_constant_tensor_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "maxPool2d.https.any.js",
    "maxPool2d float16 4D constant tensor default options",
    "onnx",
    "PASS",
)
